[package]
name = "json-jar"
version = "0.0.1"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2021"
repository = "https://github.com/j0rsa/json-jar"
license = "MIT"
readme = "README.md"
description = "Keep your json requests in file"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
actix-web = "4.4.0"
serde_json = "1.0.107"

log = "0.4.17"

[dev-dependencies]
env_logger = "0.10.0"
dotenvy = "0.15.5"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true # Perform link-time optimizations.